nav.adoc に 03_diagram のリンクを追加しました

--- a/modules/ROOT/nav.adoc
+++ b/modules/ROOT/nav.adoc
@@ -3,3 +3,6 @@
 .include directive で章毎にファイルを分けてみる
 * xref:ROOT:02_include/01.adoc[IntelliJ IDEA 2020.3 新機能メモ書き]
 * xref:ROOT:02_include/02.adoc[Asciidoctor+Gradle の環境で AsciiDoc 形式のドキュメントから HTML ファイルを生成してみる]
+
+.AsciiDoc 形式のドキュメントに PlantUML の図を埋め込む
+* xref:ROOT:03_diagram/index.adoc[サンプル]
